<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FSOSS</string>
    <string name="title_activity_main">Main Activity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_add">Add</string>
    <string name="title_activity_note">Note</string>
    <string name="title_note">Note Title</string>
    <string name="content_note">Add any notes here</string>
    <string name="action_save">Save</string>
    <string name="alert_title">Empty fields</string>
    <string name="alert_message">All fields must be filled</string>
    <string name="action_delete">Delete</string>
    <string name="empty_notes">No notes added</string>
    <string name="sort_time">Time</string>
    <string name="sort_event">Event</string>
    <string name="sort_speaker">Speaker</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_sort">Sort</string>
    <string name="action_add_reminder">Add Reminder</string>
    <string name="action_email">Email</string>

</resources>
